--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,8 @@
 
 # Site settings
 title: Projeto Taroni Muay Thai Para Todos
-email: brunochacal@gmail.com
+email: chacal.bl@hotmail.com
+endereco: Av. Santa Cruz (Taroni), 7190 - Senador Camará / Rio de Janeiro/RJ
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
