--- a/_config.yml
+++ b/_config.yml
@@ -10,9 +10,8 @@ title: Projeto Taroni Muay Thai Para Todos
 email: chacal.bl@hotmail.com
 endereco: Av. Santa Cruz (Taroni), 7190 - Senador Camará / Rio de Janeiro/RJ
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  O projeto Taroni Muay Thai Para Todos surgiu com o intuito de incentivar a prática
+  esportiva por crianças, jovens e adultos. Conheça mais sobre o projeto.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://www.projetotaroni.org" # the base hostname & protocol for your site
 
